--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,5 @@
 {
-  "plugins": ["prettier-plugin-jinja-template"]
+  "plugins": ["prettier-plugin-jinja-template"],
+  "singleQuote": true,
+  "semi": false
 }
